# 3-python-package-exercise-mjet

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml
src/Backup/3-30/: __main__.py  finder.py
src/pyFilmFinder/: __main__.py  filmFinder.py  find_similar.py  finder.py  json  nlp.py  stop_list.py  verify.py
tests/: function_test.py  get_dict_diehard.json  rank_similar_diehard.json  sample_test.py
