[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyFilmFinder"
description = "A Python package designed to simplify the process of discovering and exploring films."
version = "0.0.1"
authors = [
  { name="Eleazar Neri" },
  { name="Terry Qui" },
  { name="Johan Gallardo" },
  { name="Marc Etter" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "tmdb", "films"]
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-spring2024/3-python-package-exercise-mjet"
"Repository" = "https://github.com/software-students-spring2024/3-python-package-exercise-mjet.git"
"Bug Tracker" = "https://github.com/software-students-spring2024/3-python-package-exercise-mjet/issues"

[project.scripts]
pyFilmFinder = "pyFilmFinder.__main__:main"